--- a/index.html
+++ b/index.html
@@ -1,47 +1,108 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
   <title>Concerts on a map</title>
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<style type="text/css">
-  html { height: 100% }
-  body { height: 100%; margin: 0px; padding: 0px }
-  #map_canvas { width:100%; height: 100% }
-  h1 {position: absolute; left: 100px; top: 0;}
-  h2 {position: absolute; left: 100px; top: 100px;}
-</style>
-<script type="text/javascript"
-    src="http://maps.google.com/maps/api/js?sensor=false">
-</script>
-<script type="text/javascript">
-  var map;
-  
-  function placeMarkers(places) {
-    for(title in places) {
-      var latlng = new google.maps.LatLng(places[title][0], places[title][1]);
-      new google.maps.Marker({position: latlng, map: map, title: title});   
-    }
-  }
+  <style type="text/css">
+    html { height: 100% }
+    body { height: 100%; margin: 0px; padding: 0px }
+    #map_canvas { width:100%; height: 100% }
+    h1, h2, form {position: absolute; left: 100px; top: 0;}
+    h2 {top: 100px;}
+    form {top: 200px;}
+  </style>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script type="text/javascript">
+    var map;
+    var geocoder;
 
-  function drawLine(places) {
-    var coordinates = new Array();
-    for(title in places) {
-      coordinates.push(new google.maps.LatLng(places[title][0], places[title][1]))
+    function placeMarkers(places) {
+      for(title in places) {
+        var latlng = new google.maps.LatLng(places[title][0], places[title][1]);
+        new google.maps.Marker({position: latlng, map: map, title: title});   
+      }
     }
-    new google.maps.Polyline({path: coordinates}).setMap(map);
-  }
 
-  function initialize() {
-    var myLatlng = new google.maps.LatLng(37.823, -96.284);
-    var myOptions = {
-      zoom: 5,
-      center: myLatlng,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
+    function drawLine(places) {
+      var coordinates = new Array();
+      for(title in places) {
+        coordinates.push(new google.maps.LatLng(places[title][0], places[title][1]))
+      }
+      new google.maps.Polyline({path: coordinates}).setMap(map);
     }
-    map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
-  }
-    
-</script>
+
+    function initialize() {
+      var myLatlng = new google.maps.LatLng(37.823, -96.284);
+      var myOptions = {
+        zoom: 5,
+        center: myLatlng,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      }
+      map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+      geocoder = new google.maps.Geocoder();
+    }
+
+  </script>
+
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+  <script src="http://127.0.0.1:8080/socket.io/socket.io.js"></script> 
+  <script> 
+    // make a connection to the server
+    var socket = new io.Socket('127.0.0.1', {port:8080, connectTimeout:5000});
+    // make a message buffer in case things get congested
+    var buffer = [];
+    socket.connect();
+     socket.on('connection', function(client){
+  	  client.send({buffer: buffer});
+  	  client.broadcast({announcement: client.sessionId + ' connected'});
+    });
+ 
+    socket.on('connect_failed', function(){
+          alert('The connection to the server failed.');
+    });
+ 
+    socket.on('message', function(message){
+          // when the client gets a message from the server, 
+          // add it to the buffer and display the message
+  	  buffer.push(message);
+  	  if(buffer.length > 15)
+  		  buffer.shift();	  
+  	  appendMessage(message.message);
+    });
+ 
+    socket.on('disconnect', function(client){ 
+      // on disconnect, broadcast it to the server
+      client.broadcast({ announcement: client.sessionId + ' disconnected' });
+    });
+ 
+    // send a message to the server
+    function sendMessage(message){
+  	  if(!message){
+  	  	var msg = $("input#message").val(); 
+  	  	$("input#message").val('');
+  	  } else {
+  		var msg = message; 
+  	  }
+  	  if(msg.length > 0){ // stop annoying empty messages
+  	  	if(socket.send({message:msg})) // send the message
+      	  	    appendMessage('You: ' + msg); // show the message
+  	  }
+    }
+ 
+    // show the message on the screen
+    function appendMessage(message){
+  	    //$('body').append('<div class="msg">' + message + '</div>'); 
+        geocoder.geocode({'address': message}, function(responses) {
+          if (responses && responses.length > 0) {
+            coords = responses[0].geometry.location;
+            title = responses[0].formatted_address
+            var latlng = new google.maps.LatLng(coords.Ba, coords.Ca);
+            new google.maps.Marker({position: latlng, map: map, title: title});   
+          }
+        });
+    }
+  </script>
 </head>
 <body onload="initialize()">
   <div id="map_canvas"></div>
@@ -54,5 +115,11 @@
   </script>
   <h1 onclick='placeMarkers(cities);'>Markers</h1>
   <h2 onclick='drawLine(cities);'>Line</h2>
+  <form method="post" action="" onsubmit="return false;" />
+    <input type="text" name="message" id="message" value="Los Angeles, CA" />
+    <input id="client" name="client" value="" type="hidden" />
+    <input type="submit" class="button" name="send" id="send" value="Send" onclick="sendMessage();" />
+  </form>
+
 </body>
 </html>
